# cmake-objlib-dedup-bug

./: CMakeLists.txt  README.md  compile.sh
src/: main.cpp
src/namespace1/: result.cpp  result.hpp
src/namespace2/: result.cpp  result.hpp
